--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <button type="button">resert</button>
             <p class="computer-score">0</p>
         </div>
+        <script src="/main.js" type="text/Javascript" ></script>
+</body>
+</html>
     </div>
     <script src="/main.js"></script>
 </body>
